Refactored file contents save logic to incorporate file content type, introduced caching for file metadata