@@ -1,11 +1,13 @@
 package com.samsepiol.file.nexus.content.models.request;
 
+import com.samsepiol.file.nexus.content.data.models.enums.FileContentType;
 import lombok.Builder;
 import lombok.NonNull;
 import lombok.Value;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @Value
 @Builder
@@ -22,17 +24,6 @@ public class FileContentSaveServiceRequest {
 
     @NonNull
     @Builder.Default
-    List<String> fileContents = Collections.emptyList();
-
-    public static @NonNull FileContentSaveServiceRequest from(String fileId,
-                                                              String fileType,
-                                                              String fileContent) {
-
-        return FileContentSaveServiceRequest.builder()
-                .fileId(fileId)
-                .fileType(fileType)
-                .fileContents(List.of(fileContent))
-                .build();
-    }
+    List<Map.Entry<FileContentType, Object>> fileContents = Collections.emptyList();
 
 }
